--- a/04-Clustering.Rmd
+++ b/04-Clustering.Rmd
@@ -1042,7 +1042,7 @@ gr_nsl <- GenomicRanges::GRanges(as.data.frame(clus_nsl))
 ```
 
 ```{r calc_nsl_region_share}
-# mean sharing if ihs regions between all super populations
+# mean sharing of nsl regions between all super populations
 sp_list <- list()
 super_pops <- c("POL","AMR","AFR","EUR","EAS","SAS")
 for(sp1 in super_pops){
@@ -1056,7 +1056,30 @@ mean_super_share_nsl <- mean(unlist(sp_list))
 rm(super_pops, sp_list)
 ```
 
-The clustering results using regions of significant \gls{nsl} gave the same groupings as \gls{ihs} (Figure \@ref(fig:nslclust)). This similarity was also seen with the differences in individual populations, where \gls{nzc} and \gls{gbr} had the highest percentage of shared regions at `r sprintf("%.1f",mat_nsl['EUR_NZC','EUR_GBR'] *100)`%. \Gls{nzm} and \gls{beb} shared the lowest percentage of regions at `r sprintf("%.1f",mat_nsl['POL_NZM','SAS_BEB'] *100)`%. The percentage of the significant \gls{nsl} regions the Polynesian populations shared with AMR was `r (sum(GenomicRanges::width(GenomicRanges::reduce(GenomicRanges::intersect(gr_nsl[gr_nsl$pop %in% unique(gr_nsl$pop[grep('POL', gr_nsl$pop)])], gr_nsl[gr_nsl$pop %in% unique(gr_nsl$pop[grep('AMR', gr_nsl$pop)]) ]))))/sum(GenomicRanges::width(GenomicRanges::reduce(gr_nsl[gr_nsl$pop %in% unique(gr_nsl$pop[grep('POL', gr_nsl$pop)])]))) * 100) %>% sprintf('%.1f',.)`%, AFR  was `r (sum(GenomicRanges::width(GenomicRanges::reduce(GenomicRanges::intersect(gr_nsl[gr_nsl$pop %in% unique(gr_nsl$pop[grep('POL', gr_nsl$pop)])], gr_nsl[gr_nsl$pop %in% unique(gr_nsl$pop[grep('AFR', gr_nsl$pop)]) ]))))/sum(GenomicRanges::width(GenomicRanges::reduce(gr_nsl[gr_nsl$pop %in% unique(gr_nsl$pop[grep('POL', gr_nsl$pop)])]))) * 100) %>% sprintf('%.1f',.)`%, EAS   was `r (sum(GenomicRanges::width(GenomicRanges::reduce(GenomicRanges::intersect(gr_nsl[gr_nsl$pop %in% unique(gr_nsl$pop[grep('POL', gr_nsl$pop)])], gr_nsl[gr_nsl$pop %in% unique(gr_nsl$pop[grep('EAS', gr_nsl$pop)]) ]))))/sum(GenomicRanges::width(GenomicRanges::reduce(gr_nsl[gr_nsl$pop %in% unique(gr_nsl$pop[grep('POL', gr_nsl$pop)])]))) * 100) %>% sprintf('%.1f',.)`%, EUR was `r (sum(GenomicRanges::width(GenomicRanges::reduce(GenomicRanges::intersect(gr_nsl[gr_nsl$pop %in% unique(gr_nsl$pop[grep('POL', gr_nsl$pop)])], gr_nsl[gr_nsl$pop %in% unique(gr_nsl$pop[grep('EUR', gr_nsl$pop)]) ]))))/sum(GenomicRanges::width(GenomicRanges::reduce(gr_nsl[gr_nsl$pop %in% unique(gr_nsl$pop[grep('POL', gr_nsl$pop)])]))) * 100) %>% sprintf('%.1f',.)`%, and SAS was `r (sum(GenomicRanges::width(GenomicRanges::reduce(GenomicRanges::intersect(gr_nsl[gr_nsl$pop %in% unique(gr_nsl$pop[grep('POL', gr_nsl$pop)])], gr_nsl[gr_nsl$pop %in% unique(gr_nsl$pop[grep('SAS', gr_nsl$pop)]) ]))))/sum(GenomicRanges::width(GenomicRanges::reduce(gr_nsl[gr_nsl$pop %in% unique(gr_nsl$pop[grep('POL', gr_nsl$pop)])]))) * 100) %>% sprintf('%.1f',.)`%. This was higher than the mean (`r sprintf("%.1f",mean_super_share_nsl * 100)`%) for \gls{eas}, but lower for the other super populations for proportion of region sharing between super populations. The Polynesian populations were clustered together with a high proportion of shared significant regions. The Eastern Polynesians had on average `r mat_nsl %>% data.frame %>% mutate(pop1 = row.names(.))%>% gather("pop2","nsl", 1:(NCOL(.)-1)) %>% filter(pop1!=pop2, (pop1 %in% c("POL_CIM","POL_NZM") & pop2 %in% c("POL_CIM","POL_NZM"))) %>% summarise(mean(nsl)*100) %>% sprintf('%.1f',.)`% in common. NZM shared `r (mat_nsl[rownames(mat_nsl) == "POL_CIM", colnames(mat_nsl) == "POL_NZM"] * 100) %>% sprintf('%.1f',.)`% of regions with CIM, whereas CIM shared `r (mat_nsl[rownames(mat_nsl) == "POL_NZM", colnames(mat_nsl) == "POL_CIM"] * 100) %>% sprintf('%.1f',.)`% of regions with NZM. The Western Polynesians had `r mat_nsl %>% data.frame %>% mutate(pop1 = row.names(.))%>% gather("pop2","nsl", 1:(NCOL(.)-1)) %>% filter(pop1!=pop2, (pop1 %in% c("POL_TON","POL_SAM") & pop2 %in% c("POL_TON","POL_SAM"))) %>% summarise(mean(nsl)*100) %>% sprintf('%.1f',.)`% of regions shared on average. SAM shared `r (mat_nsl[rownames(mat_nsl) == "POL_TON", colnames(mat_nsl) == "POL_SAM"] * 100) %>% sprintf('%.1f',.)`% of regions with TON, but TON shared `r (mat_nsl[rownames(mat_nsl) == "POL_SAM", colnames(mat_nsl) == "POL_TON"] * 100) %>% sprintf('%.1f',.)`% of regions with SAM. However, between the Eastern and Western populations was on average `r mat_nsl %>% data.frame %>% mutate(pop1 = row.names(.))%>% gather("pop2","nsl", 1:(NCOL(.)-1)) %>% filter((pop1 %in% c("POL_CIM","POL_NZM") & pop2 %in% c("POL_TON","POL_SAM")) | (pop2 %in% c("POL_CIM","POL_NZM") & pop1 %in% c("POL_TON","POL_SAM"))) %>% summarise(mean(nsl)*100) %>% sprintf('%.1f',.)`%. Of the regions from all of the Polynesian populations, the Western Polynesian populations made up `r (sum(GenomicRanges::width(GenomicRanges::reduce(gr_nsl[gr_nsl$pop %in% c("POL_SAM","POL_TON")])))/sum(GenomicRanges::width(GenomicRanges::reduce(gr_nsl[gr_nsl$pop %in% c("POL_NZM", "POL_CIM", "POL_SAM","POL_TON")]))) * 100) %>% sprintf('%.1f',.)`%. The Eastern Polynesians made up `r (sum(GenomicRanges::width(GenomicRanges::reduce(gr_nsl[gr_nsl$pop %in% c("POL_NZM","POL_CIM")])))/sum(GenomicRanges::width(GenomicRanges::reduce(gr_nsl[gr_nsl$pop %in% c("POL_NZM", "POL_CIM", "POL_SAM","POL_TON")]))) *100) %>% sprintf('%.1f',.)`%. The total percentage of regions common for all Polynesian populations was `r (sum(GenomicRanges::width(GenomicRanges::reduce(GenomicRanges::intersect(GenomicRanges::intersect(gr_nsl[gr_nsl$pop == 'POL_CIM'], gr_nsl[gr_nsl$pop == "POL_NZM"]), GenomicRanges::intersect(gr_nsl[gr_nsl$pop == 'POL_SAM'], gr_nsl[gr_nsl$pop == "POL_TON"])))))/sum(GenomicRanges::width(GenomicRanges::reduce(gr_nsl[gr_nsl$pop %in% c("POL_NZM", "POL_CIM", "POL_SAM","POL_TON")]))) * 100) %>% sprintf('%.1f',.)`%. This shows that within the Eastern or Western Polynesian groups there was a larger proportion of regions that were similar for significant \gls{nsl}, than between the Eastern and Western groups.
+```{r}
+nsl_amr_pol_region_share <- (sum(GenomicRanges::width(GenomicRanges::reduce(GenomicRanges::intersect(gr_nsl[gr_nsl$pop %in% unique(gr_nsl$pop[grep('POL', gr_nsl$pop)])], gr_nsl[gr_nsl$pop %in% unique(gr_nsl$pop[grep('AMR', gr_nsl$pop)]) ]))))/sum(GenomicRanges::width(GenomicRanges::reduce(gr_nsl[gr_nsl$pop %in% unique(gr_nsl$pop[grep('POL', gr_nsl$pop)])]))) * 100) %>% sprintf('%.1f',.)
+
+nsl_afr_pol_region_share <- (sum(GenomicRanges::width(GenomicRanges::reduce(GenomicRanges::intersect(gr_nsl[gr_nsl$pop %in% unique(gr_nsl$pop[grep('POL', gr_nsl$pop)])], gr_nsl[gr_nsl$pop %in% unique(gr_nsl$pop[grep('AFR', gr_nsl$pop)]) ]))))/sum(GenomicRanges::width(GenomicRanges::reduce(gr_nsl[gr_nsl$pop %in% unique(gr_nsl$pop[grep('POL', gr_nsl$pop)])]))) * 100) %>% sprintf('%.1f',.)
+
+nsl_eas_pol_region_share <- (sum(GenomicRanges::width(GenomicRanges::reduce(GenomicRanges::intersect(gr_nsl[gr_nsl$pop %in% unique(gr_nsl$pop[grep('POL', gr_nsl$pop)])], gr_nsl[gr_nsl$pop %in% unique(gr_nsl$pop[grep('EAS', gr_nsl$pop)]) ]))))/sum(GenomicRanges::width(GenomicRanges::reduce(gr_nsl[gr_nsl$pop %in% unique(gr_nsl$pop[grep('POL', gr_nsl$pop)])]))) * 100) %>% sprintf('%.1f',.)
+
+nsl_eur_pol_region_share <- (sum(GenomicRanges::width(GenomicRanges::reduce(GenomicRanges::intersect(gr_nsl[gr_nsl$pop %in% unique(gr_nsl$pop[grep('POL', gr_nsl$pop)])], gr_nsl[gr_nsl$pop %in% unique(gr_nsl$pop[grep('EUR', gr_nsl$pop)]) ]))))/sum(GenomicRanges::width(GenomicRanges::reduce(gr_nsl[gr_nsl$pop %in% unique(gr_nsl$pop[grep('POL', gr_nsl$pop)])]))) * 100) %>% sprintf('%.1f',.)
+
+nsl_sas_pol_region_share <- (sum(GenomicRanges::width(GenomicRanges::reduce(GenomicRanges::intersect(gr_nsl[gr_nsl$pop %in% unique(gr_nsl$pop[grep('POL', gr_nsl$pop)])], gr_nsl[gr_nsl$pop %in% unique(gr_nsl$pop[grep('SAS', gr_nsl$pop)]) ]))))/sum(GenomicRanges::width(GenomicRanges::reduce(gr_nsl[gr_nsl$pop %in% unique(gr_nsl$pop[grep('POL', gr_nsl$pop)])]))) * 100) %>% sprintf('%.1f',.)
+
+nsl_east_pol_region_share <- mat_nsl %>% data.frame %>% mutate(pop1 = row.names(.))%>% gather("pop2","nsl", 1:(NCOL(.)-1)) %>% filter(pop1!=pop2, (pop1 %in% c("POL_CIM","POL_NZM") & pop2 %in% c("POL_CIM","POL_NZM"))) %>% summarise(mean(nsl)*100) %>% sprintf('%.1f',.)
+
+nsl_west_pol_pol_region_share <- (sum(GenomicRanges::width(GenomicRanges::reduce(gr_nsl[gr_nsl$pop %in% c("POL_SAM","POL_TON")])))/sum(GenomicRanges::width(GenomicRanges::reduce(gr_nsl[gr_nsl$pop %in% c("POL_NZM", "POL_CIM", "POL_SAM","POL_TON")]))) * 100) %>% sprintf('%.1f',.)
+
+nsl_east_pol_pol_region_share <- (sum(GenomicRanges::width(GenomicRanges::reduce(gr_nsl[gr_nsl$pop %in% c("POL_NZM","POL_CIM")])))/sum(GenomicRanges::width(GenomicRanges::reduce(gr_nsl[gr_nsl$pop %in% c("POL_NZM", "POL_CIM", "POL_SAM","POL_TON")]))) *100) %>% sprintf('%.1f',.)
+
+nsl_mean_east_pol__west_pol_region_share <- mat_nsl %>% data.frame %>% mutate(pop1 = row.names(.))%>% gather("pop2","nsl", 1:(NCOL(.)-1)) %>% filter((pop1 %in% c("POL_CIM","POL_NZM") & pop2 %in% c("POL_TON","POL_SAM")) | (pop2 %in% c("POL_CIM","POL_NZM") & pop1 %in% c("POL_TON","POL_SAM"))) %>% summarise(mean(nsl)*100) %>% sprintf('%.1f',.)
+
+nsl_tot_pol_region_in_common <- (sum(GenomicRanges::width(GenomicRanges::reduce(GenomicRanges::intersect(GenomicRanges::intersect(gr_nsl[gr_nsl$pop == 'POL_CIM'], gr_nsl[gr_nsl$pop == "POL_NZM"]), GenomicRanges::intersect(gr_nsl[gr_nsl$pop == 'POL_SAM'], gr_nsl[gr_nsl$pop == "POL_TON"])))))/sum(GenomicRanges::width(GenomicRanges::reduce(gr_nsl[gr_nsl$pop %in% c("POL_NZM", "POL_CIM", "POL_SAM","POL_TON")]))) * 100) %>% sprintf('%.1f',.)
+```
+
+
+The clustering results using regions of significant \gls{nsl} gave the same groupings as \gls{ihs} (Figure \@ref(fig:nslclust)). This similarity was also seen with the differences in individual populations, where \gls{nzc} and \gls{gbr} had the highest percentage of shared regions at `r sprintf("%.1f",mat_nsl['EUR_NZC','EUR_GBR'] *100)`%. \Gls{nzm} and \gls{beb} shared the lowest percentage of regions at `r sprintf("%.1f",mat_nsl['POL_NZM','SAS_BEB'] *100)`%. The percentage of the significant \gls{nsl} regions the Polynesian populations shared with AMR was `r nsl_amr_pol_region_share`%, AFR  was `r nsl_afr_pol_region_share`%, EAS   was `r nsl_eas_pol_region_share`%, EUR was `r nsl_eur_pol_region_share`%, and SAS was `r nsl_sas_pol_region_share`%. This was lower than the mean (`r sprintf("%.1f",mean_super_share_nsl * 100)`%) proportion of region sharing between super populations. The Polynesian populations were clustered together with a high proportion of shared significant regions. The Eastern Polynesians had on average `r nsl_east_pol_region_share`% in common. NZM shared `r (mat_nsl[rownames(mat_nsl) == "POL_CIM", colnames(mat_nsl) == "POL_NZM"] * 100) %>% sprintf('%.1f',.)`% of regions with CIM, whereas CIM shared `r (mat_nsl[rownames(mat_nsl) == "POL_NZM", colnames(mat_nsl) == "POL_CIM"] * 100) %>% sprintf('%.1f',.)`% of regions with NZM. The Western Polynesians had `r mat_nsl %>% data.frame %>% mutate(pop1 = row.names(.))%>% gather("pop2","nsl", 1:(NCOL(.)-1)) %>% filter(pop1!=pop2, (pop1 %in% c("POL_TON","POL_SAM") & pop2 %in% c("POL_TON","POL_SAM"))) %>% summarise(mean(nsl)*100) %>% sprintf('%.1f',.)`% of regions shared on average. SAM shared `r (mat_nsl[rownames(mat_nsl) == "POL_TON", colnames(mat_nsl) == "POL_SAM"] * 100) %>% sprintf('%.1f',.)`% of regions with TON, but TON shared `r (mat_nsl[rownames(mat_nsl) == "POL_SAM", colnames(mat_nsl) == "POL_TON"] * 100) %>% sprintf('%.1f',.)`% of regions with SAM. However, between the Eastern and Western populations, region sharing averaged `r nsl_mean_east_pol__west_pol_region_share`%. Of the regions from all of the Polynesian populations, the Western Polynesian populations made up `r nsl_west_pol_pol_region_share`%. The Eastern Polynesians made up `r nsl_east_pol_pol_region_share`%. The total percentage of regions common for all Polynesian populations was `r nsl_tot_pol_region_in_common`%. This shows that within the Eastern or Western Polynesian groups there was a larger proportion of regions that were similar for significant \gls{nsl}, than between the Eastern and Western groups.
 
 The regions that were in common for significant \gls{nsl} between all of the \gls{pol} populations had 27 genes that intersected. These genes were part of 10 pathways, but none were significantly enriched. Regions that were in common between \gls{nzm} and \gls{cim} had 230 genes that intersected, and were involved with 160 pathways. A single pathway, "Glycosaminoglycan degradation_Homo sapiens_hsa00531", was significantly enriched (adjusted P 9.223x10-3) with four of 19 genes (_HPSE2_, _HYAL1_, _HYAL2_, and _HYAL3_). The regions that were in common between \gls{sam} and \gls{ton} had 319 genes that intersected them. There were 197 pathways that these genes were part of but none were significantly enriched.
 
